# node.ext.ugm

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  bootstrap.sh  buildout.cfg  dev.cfg  develop.cfg  mkpw  mx.ini  pyproject.toml  run_coverage.sh  run_tests.sh  setup.py
.github/workflows/: test.yaml  test.yml
scripts/: coverage.sh  install.sh  tests.sh
src/node/ext/ugm/: __init__.py  __init__.rst  __init__.txt  _api.py  _api.rst  _api.txt  _tests.py  _user.py  _user.py_  configure.zcml  file.py  file.rst  file.txt  interfaces.py  tests.py  user.txt  users.py
src/node/ext/ugm/tests/: __init__.py  test_api.py  test_file.py  test_ugm.py
